fix!: CSS based loading spinner (#1532)
- Swapped our LoadingSpinner implementation with a simpler html / CSS
only spinner
- Fixes a layout shift after font load caused by `font-size:
$iris-panel-icon-font-size` in `.message-icon` of LoadingOverlay
- Fixes loading spinner backtracking due to multiple instances of
spinners

**Regression Tests Performed**
- LoadingOverlay - I added a synthetic wait to PluginUtils right after
the manifest loading. Loading overlay is now seamless. No layout shift
or backtracking

Verified the following look as they did before

Community
- Styleguide indeterminate and progress spinners 
- Styleguide context menu spinners
- Console "Running" spinner
- AppMainContainer disconnection spinner
- Command history tooltip elapsed spinner
- Advanced filter spinner
- Column statistics spinner
- IrisGridCopyHandler slight adjustment such that spinner + text are
centered
- PartitionSelectorSearch spinner
- Commit button in PendingDataBottomBar
- Custom column builder "applying" spinner
- Table CSV exporter spinner

Enterprise
- Enterprise login spinner

```
  await new Promise(resolve => {
      setTimeout(resolve, 2000);
  });
```

fixes #1531

BREAKING CHANGE: Inline LoadingSpinner instances will need to be
decorated with `className="loading-spinner-vertical-align"` for vertical
alignment to work as before

--- a/packages/components/src/LoadingOverlay.scss
+++ b/packages/components/src/LoadingOverlay.scss
@@ -13,9 +13,14 @@ $iris-panel-scrim-bg: rgba(black, 0.1);
   overflow: hidden;
 
   .message-content {
+    display: flex;
+    flex-direction: column;
     font-size: $iris-panel-message-font-size;
+    gap: 20px;
     .message-icon {
       font-size: $iris-panel-icon-font-size;
+      height: $iris-panel-icon-font-size;
+      line-height: $iris-panel-icon-font-size;
       .svg-inline--fa {
         font-size: inherit;
       }
