--- a/packages/iris-grid/src/ColumnStatistics.scss
+++ b/packages/iris-grid/src/ColumnStatistics.scss
@@ -77,3 +77,6 @@
   display: inline-block;
   color: $gray-400;
 }
+.column-statistics-loading .loading-spinner {
+  margin-right: 5px;
+}
