--- a/packages/iris-grid/src/IrisGridBottomBar.scss
+++ b/packages/iris-grid/src/IrisGridBottomBar.scss
@@ -52,7 +52,8 @@ $ease-out-bounce-back: cubic-bezier(0.175, 0.885, 0.32, 1.275);
 
     .btn {
       min-width: 10rem;
-      .svg-inline--fa {
+      .svg-inline--fa,
+      .loading-spinner {
         margin-right: 0.5rem;
       }
     }
